--- a/src/Components/BTShoeShop/style.css
+++ b/src/Components/BTShoeShop/style.css
@@ -3,3 +3,6 @@
     background-size: contain;
     background-repeat: repeat-y;
 }
+.background_color{
+   background-color: rgba(15, 0, 0, 0.212);
+}
